freshed-rs-macros/tests/ui/fail/html_async_in_trailing_garbage.stderr
error: trailing non-markup tokens after parsed markup are not allowed
 --> tests/ui/fail/html_async_ctx_trailing_garbage.rs:5:47
  |
5 |     let _ = html_async_ctx!(_ctx, <div>ok</div>,);
  |                                               ^
